dropdown z-index fix
removal of some files,
visual fixes,

--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -424,7 +424,7 @@ footer .pagetitle{
     box-sizing: border-box;
     padding: 5px;
     margin-left: -40px;
-    z-index: 99;
+    z-index: 100;
     height: auto !important;
     text-align: justify;
     
